Fix issues with 100% width elements causing overflow

--- a/frontend/src/components/Dropdown/style.module.css
+++ b/frontend/src/components/Dropdown/style.module.css
@@ -18,8 +18,9 @@
 .drop {
   background-color: #bbdefb;
   box-shadow: 0px 10px 20px -18px rgba(0, 0, 0, 0.75);
-  min-width: 100vw;
+  max-width: 100vw;
   padding: 0 24px 12px 24px;
   position: fixed;
+  width: 100%;
   z-index: 10;
 }
